Change button labels

--- a/templates/content/homepage.html.twig
+++ b/templates/content/homepage.html.twig
@@ -18,10 +18,10 @@
 
                 <div class="actions">
                     <a class="action hvr-buzz" href="{{ path('run', { application: 'slack' }) }}">
-                        <i class="fab fa-slack"></i> Add to Slack
+                        <i class="fab fa-slack"></i> Run on Slack
                     </a>
                     <a class="action hvr-buzz" href="{{ path('run', { application: 'discord' }) }}">
-                        <i class="fab fa-discord"></i> Add to Discord
+                        <i class="fab fa-discord"></i> Run on Discord
                     </a>
                 </div>
             </div>
@@ -59,7 +59,7 @@
                 </div>
                 <div class="step-feature-text">
                     <h3>1. Connect to Your Application</h3>
-                    <p>Click on one of the "Add to Slack" or "Add to Discord" buttons above to authorize Secret Santa to access your account.</p>
+                    <p>Click on one of the "Run on Slack" or "Run on Discord" buttons above to authorize Secret Santa to access your account.</p>
                 </div>
             </section>
 
