--- a/templates/content/faq.html.twig
+++ b/templates/content/faq.html.twig
@@ -20,18 +20,18 @@
                         </h2>
                         <p>
                             <em>Short answer:</em>
-                            Nothing :)
+                            Nothing 😚
                         </p>
                         <p>
                             <em>Detailled answer:</em>
                             We receive only the data mandatory to start the Secret Santa:
                             the list of users and usergroups in your organization. Once the private messages have been sent,
-                            we forget everything! In fact, we do not even have a database ;)
+                            we forget everything! In fact, we do not even have a database 😮
                         </p>
                     </li>
                     <li id="avoid-association">
                         <h2>
-                            <a href="#avoid-association">Can I avoid someone to receive a gift from someone else?</a>
+                            <a href="#avoid-association">Can I make sure someone will be matched or not matched with someone else?</a>
                         </h2>
                         <p>
                             No, the association is purely random so you cannot do that with our application.
@@ -44,12 +44,12 @@
                         </h2>
                         <p>
                             Simply drop us an email at <a href="mailto:hello@secret-santa.team">hello@secret-santa.team</a>
-                            with the name, url and logo of the entity you want to add.
+                            with the name, url and logo of the entity you want to add. It's free but if you want to tweet or share our app to the world, you are more than welcome.
                         </p>
                     </li>
                     <li id="big-team">
                         <h2>
-                            <a href="#big-team">Will you app work with team with more than 500+ people?</a>
+                            <a href="#big-team">Will the app work with team larger than 500 people?</a>
                         </h2>
                         <p>
                             There is a 2 things to understand here. The first step in our application is to retrieve
@@ -58,7 +58,7 @@
                         </p>
                         <p>
                             When your team is really big, Slack or Discord APIs can fail to send us all the users in a
-                            reasonable duration. That means you will no be able to start a Secret Santa at the moment. A
+                            reasonable duration. That means you will no be able to start a Secret Santa. A
                             possible workaround would be to create a new Slack workspace / Discord server with only the
                             participants.
                         </p>
