Add 🔎 on the Search Bar to make it more visible

--- a/templates/santa/run.html.twig
+++ b/templates/santa/run.html.twig
@@ -38,7 +38,7 @@
                                     <span class="uncheck-all" id="all-unchecker" title="Uncheck all the visible users in the list below">Uncheck all</span>
                                 </div>
                                 <div class="search-wrapper">
-                                    <input autofocus placeholder="Search user by real name or username" type="text" id="user-search-input" autocomplete="off" />
+                                    <input autofocus placeholder="🔎 Search user by real name or username" type="text" id="user-search-input" autocomplete="off" />
                                     <span class="search-cleaner fas fa-times is-hidden" id="search-cleaner" title="Empty the query"></span>
                                 </div>
                             </div>
