--- a/templates/content/faq.html.twig
+++ b/templates/content/faq.html.twig
@@ -64,8 +64,8 @@
                         </p>
                         <p>
                             The second step is to dispatch a private message to all the selected users. Even if you started
-                            a Secret Santa with a lot of participants, we will safely handle that. If the operation times out
-                            we will propose you to continue the sending as if nothing happened.
+                            a Secret Santa with a lot of participants, the application will send all the messages progressively.
+                            So there should not be any problem here.
                         </p>
                     </li>
                     <li id="invalid-user">
