--- a/templates/santa/run.html.twig
+++ b/templates/santa/run.html.twig
@@ -101,7 +101,7 @@
 
                                         <p class="help hidden" id="big-santa-warning">
                                             When selecting a lot of participants, the final step (sending private messages)
-                                            can take some time (up to 20 secondes).<br />
+                                            can take some time.<br />
                                             Don't worry, in case something goes wrong, a "Retry" button will allow you to
                                             send remaining messages not yet sent.
                                         </p>
