Add answer about new participant in the FAQ

--- a/templates/content/faq.html.twig
+++ b/templates/content/faq.html.twig
@@ -38,13 +38,23 @@
                             An alternative could be to launch 2 Secret Santa with two groups of people.
                         </p>
                     </li>
+                    <li id="new-participant">
+                        <h2>
+                            <a href="#new-participant">Can I add a new participant once messages have been sent?</a>
+                        </h2>
+                        <p>
+                            No, you can't. However, you can still start a new Secret Santa. We advice you to add a note in the
+                            message mentioning that this new draw cancel and replace the old one.
+                        </p>
+                    </li>
                     <li id="hall-of-fame">
                         <h2>
                             <a href="#hall-of-fame">How can I add my company / organization to your Hall of Fame?</a>
                         </h2>
                         <p>
                             Simply drop us an email at <a href="mailto:hello@secret-santa.team">hello@secret-santa.team</a>
-                            with the name, url and logo of the entity you want to add. It's free but if you want to tweet or share our app to the world, you are more than welcome.
+                            with the name, url and logo of the entity you want to add. It's free but if you want to tweet
+                            or share our app to the world, you are more than welcome.
                         </p>
                     </li>
                     <li id="big-team">
