--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -4,8 +4,29 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" type="image/x-icon">
-        <link rel="icon" href="{{ asset('favicon.ico') }}" type="image/x-icon">
+        <link rel="apple-touch-icon-precomposed" sizes="57x57" href="{{ asset('apple-touch-icon-57x57.png') }}" />
+        <link rel="apple-touch-icon-precomposed" sizes="60x60" href="{{ asset('apple-touch-icon-60x60.png') }}" />
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ asset('apple-touch-icon-72x72.png') }}" />
+        <link rel="apple-touch-icon-precomposed" sizes="76x76" href="{{ asset('apple-touch-icon-76x76.png') }}" />
+        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ asset('apple-touch-icon-114x114.png') }}" />
+        <link rel="apple-touch-icon-precomposed" sizes="120x120" href="{{ asset('apple-touch-icon-120x120.png') }}" />
+        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ asset('apple-touch-icon-144x144.png') }}" />
+        <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{ asset('apple-touch-icon-152x152.png') }}" />
+        <link rel="apple-touch-icon-precomposed" sizes="180x180" href="{{ asset('apple-touch-icon-180x180.png') }}">
+        <link rel="icon" type="image/png" sizes="16x16" href="{{ asset('favicon-16x16.png') }}" />
+        <link rel="icon" type="image/png" sizes="32x32" href="{{ asset('favicon-32x32.png') }}" />
+        <link rel="icon" type="image/png" sizes="96x96" href="{{ asset('favicon-96x96.png') }}" />
+        <link rel="icon" type="image/png" sizes="128x128" href="{{ asset('favicon-128x128.png') }}" />
+        <link rel="icon" type="image/png" sizes="196x196" href="{{ asset('favicon-196x196.png') }}" />
+        <link rel="manifest" href="{{ asset('manifest.json') }}">
+        <meta name="theme-color" content="#E03A4D">
+        <meta name="application-name" content="Secret Santa"/>
+        <meta name="msapplication-TileColor" content="#E03A4D" />
+        <meta name="msapplication-TileImage" content="{{ asset('mstile-144x144.png') }}" />
+        <meta name="msapplication-square70x70logo" content="{{ asset('mstile-70x70.png') }}" />
+        <meta name="msapplication-square150x150logo" content="{{ asset('mstile-150x150.png') }}" />
+        <meta name="msapplication-wide310x150logo" content="{{ asset('mstile-310x150.png') }}" />
+        <meta name="msapplication-square310x310logo" content="{{ asset('mstile-310x310.png') }}" />
 
         <meta name="slack-app-id" content="A0E7EFUB1">
 
