--- a/templates/content/homepage.html.twig
+++ b/templates/content/homepage.html.twig
@@ -18,10 +18,10 @@
 
                 <div class="actions">
                     <a class="action hvr-buzz" href="{{ path('run', { application: 'slack' }) }}">
-                        <i class="fab fa-slack"></i> Run on Slack
+                        <i class="custom-fa-slack"></i> Run on Slack
                     </a>
                     <a class="action hvr-buzz" href="{{ path('run', { application: 'discord' }) }}">
-                        <i class="fab fa-discord"></i> Run on Discord
+                        <i class="custom-fa-discord"></i> Run on Discord
                     </a>
                 </div>
             </div>
