Keep stats per application

--- a/public/style.css
+++ b/public/style.css
@@ -1007,6 +1007,41 @@ textarea {
  * Stats
  */
 
+.legend {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 20px 0 40px;
+}
+
+.legend .legend-item {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 0 40px;
+}
+
+.legend .legend-item::before {
+    display: inline-block;
+    content: '';
+    padding: 10px;
+    margin: 10px;
+}
+
+.legend .legend-item.total::before {
+    background-color: #E44357;
+}
+
+.legend .legend-item.slack::before {
+    background-color: #ecb22e;
+}
+
+.legend .legend-item.discord::before {
+    background-color: #7289da;
+}
+
 .container-charts {
     padding: 10px;
     display: flex;
@@ -1031,6 +1066,11 @@ textarea {
     margin-bottom: 10px;
 }
 
+.column-multiple {
+    display: flex;
+    align-items: flex-end;
+}
+
 .graph-bar {
     background-color: #E44357;
     margin: 1px;
@@ -1043,8 +1083,12 @@ textarea {
     width: 50px;
 }
 
-.graph-bar:hover {
-    background-color: #c71d32;
+.application-slack .graph-bar {
+    background-color: #ecb22e;
+}
+
+.application-discord .graph-bar {
+    background-color: #7289da;
 }
 
 .graph-legend-x {
@@ -1059,6 +1103,11 @@ textarea {
     align-items: center;
     justify-content: center;
     overflow: hidden;
+    min-width: 100px;
+}
+
+.column-multiple .graph-column {
+    min-width: auto;
 }
 
 /** Override Font Awesome because the Slack logo is not up to date **/
