Allow to reset a secret santa by logging out the user

--- a/templates/santa/run.html.twig
+++ b/templates/santa/run.html.twig
@@ -99,6 +99,10 @@
                                             </button>
                                         </div>
 
+                                        <p class="is-center">
+                                            or <a href="{{ path('cancel', {application: application}) }}">cancel</a>
+                                        </p>
+
                                         <p class="help hidden" id="big-santa-warning">
                                             When selecting a lot of participants, the final step (sending private messages)
                                             can take some time.<br />
