--- a/templates/santa/application/run_discord.html.twig
+++ b/templates/santa/application/run_discord.html.twig
@@ -31,8 +31,10 @@
         <span>{{ user.name }}{% if user.extra.nickname %} ({{ user.extra.nickname }}){% endif %}</span>
         {% if groups %}
             <span class="user-groups">
-                {% for group in groups if user.identifier in group.userIds %}
-                    <span class="user-group">{{ group.name }}</span>
+                {% for group in groups %}
+                    {% if user.identifier in group.userIds %}
+                        <span class="user-group">{{ group.name }}</span>
+                    {% endif %}
                 {% endfor %}
             </span>
         {% endif %}
